# QtStudy

./: .gitignore  README.md  qt官方目demo学习记录.md
01_QtSource/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  res.qrc
02_LayOut/: CMakeLists.txt
03_LayOut/: mainwindow.ui
03_QDialog/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
05_Qt_Control/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  res.qrc
06_TreeWidget/: 06_TreeWidget.pro.user.275e73c  CMakeLists.txt  widget.cpp  widget.ui
07_TableWidget/: CMakeLists.txt  widget.cpp  widget.ui
08_OrtherWidget/: 08_OrtherWidget.pro.user.275e73c  CMakeLists.txt  res.qrc  widget.cpp  widget.ui
08_SmallWidget/: 08_SmallWidget.pro  CMakeLists.txt  smallwidget.cpp  smallwidget.h  smallwidget.ui  widget.cpp  widget.ui
09_QtEvent/: CMakeLists.txt  mylabel.cpp  mylabel.h  widget.cpp  widget.h  widget.ui
10_TimeEvent/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
11_QPainter/: CMakeLists.txt  res.qrc  widget.cpp  widget.h  widget.ui
12_QtPaintDevice/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
13_Qt_QFile/: CMakeLists.txt  widget.cpp  widget.ui
14_TcpSocket/: CMakeLists.txt  clientwidget.cpp  clientwidget.h  clientwidget.ui  main.cpp  serverwidget.cpp  serverwidget.h  serverwidget.ui
15_QFileSystemModel/: CMakeLists.txt  filesystem.cpp  filesystem.h  filesystem.ui
16QFileSystemModel1.1/: filesystem.cpp  filesystem.h
16_QFileSystemModel1.1/: CMakeLists.txt  QFileSystemModel.pro  README.md  filesystem.ui
16_QFileSystemModel1.2/: CMakeLists.txt
16_QFileSystemModel1.2_test/: QFileSystemModel.pro.user.a2230cb  README.md  filesystem.cpp  filesystem.h  filesystem.ui  main.cpp
16_QFileSystemModel1.2_test/test01/: mylabel.h  mytreeview2.h  mytreeview2.ui  mywidget.h  mywidget.ui  test01.pro
16_QFileSystemModel1.3/: CMakeLists.txt  mylabel.cpp  mylabel.ui  mytreeview2.cpp  mywidget.cpp  mywidget.ui
17_FormToForm/: CMakeLists.txt  FormToForm.pro  gooneform.cpp  gooneform.h  gothreeform.cpp  gothreeform.h  gotwoform.cpp  gotwoform.h  main.cpp  oneform.cpp  oneform.h  oneform.ui  threeform.cpp  threeform.h  threeform.ui  twoform.cpp  twoform.h  twoform.ui
18_namespaceUi/: CMakeLists.txt  Test02.pro  main.cpp  mywidget.cpp  mywidget.h  widget.cpp  widget.h
19_Shape/: CMakeLists.txt  widget.cpp  widget.h
20_Chess/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
21_Udp/: CMakeLists.txt  Udp.pro  client.cpp  client.h  client.ui  main.cpp  widget.cpp  widget.h  widget.ui
22_Thread/: widget.cpp  widget.h
22_Thread/Thread1/: CMakeLists.txt  mythread.cpp  mythread.h  widget.cpp  widget.h  widget.ui
22_Thread/Thread2/: CMakeLists.txt  mythread.cpp  mythread.h  widget.cpp  widget.h  widget.ui
22_Thread/Thread3/: CMakeLists.txt  Thread3.pro  main.cpp  threadimage.cpp  threadimage.h  widget.cpp  widget.h  widget.ui
23_Database/1_Database/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
23_Database/2_Sqllite/: CMakeLists.txt  student.db  widget.cpp
23_Database/3_ModelViewDatabase/: CMakeLists.txt  widget.cpp  widget.cpp.autosave  widget.h  widget.ui
24_MulFilesCopy/: 1_MulFilesCopy.pro  CMakeLists.txt  widget.cpp  widget.h  widget.ui  worker.cpp  worker.h  worker2.cpp  worker2.h
25_TcpInfoTrans/: 2_TcpInfoTrans.pro  CMakeLists.txt  main.cpp  myclient.cpp  myclient.h  myclient.ui  myserver.cpp  myserver.h  myserver.ui
26_Table/: CMakeLists.txt  ui_widget.h  widget.cpp  widget.ui
27_QTranslator/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  TestCN.ts  TestENG.ts  main.cpp  ui_widget.h  widget.cpp  widget.h  widget.ui  工作 (D).lnk
28_DynamicAttributeStyle/: CMakeLists.txt  main.cpp  mypushbutton.cpp  mypushbutton.h  styles.qss  ui_widget.h  widget.cpp  widget.ui
29_SomeControlStyle/: CMakeLists.txt  rc.qrc  styles.qss  widget.cpp  widget.ui
30_QTableWidgetDelegate/: CMakeLists.txt  spinboxdelegate.cpp  spinboxdelegate.h  widget.cpp  widget.ui
31_QWidgetFrameless/untitled7/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
